Add Agora to frontend and add "Open All" link

--- a/dependency-alerts/backend.html
+++ b/dependency-alerts/backend.html
@@ -26,7 +26,10 @@
 	const jsonDataUrl = "./backend-repos.json";
 	$(document).ready(function() {
 		$("#jsonGithubLink").attr("href", jsonDataGithubLink);
-		fetchReposAndInjectRows(jsonDataUrl, "#repos");
+		fetchRepos(jsonDataUrl, function (data) {
+			injectRows(data, "#repos")
+			addOpenAllReposLink(data, "openAllRepos")
+		});
 	});
 </script>
 </head>
@@ -37,6 +40,7 @@
 		<li> Verify that the list of repositories is accurate. If inaccurate, update <a id="jsonGithubLink">the JSON file</a>.</li>
 		<li> Check for Dependabot alerts on each repository. Create Jira tickets as needed, and dismiss the alert in GitHub once it has been addressed.</li>
 	</ol>
+	<p id="openAllRepos"></p>
 	<table >
 		<thead>
 		<tr>
