added item to review and remove 'manual' db snapshots

--- a/stack-release.html
+++ b/stack-release.html
@@ -185,6 +185,8 @@
 			<li>For any metrics we track week-to-week (including RO duration), enter in <a href="https://docs.google.com/a/sagebase.org/spreadsheets/d/1u1fYXFkW4pzQ4f1OhQvyON9PEtgcP6UZLierGeuknbw/edit?usp=sharing">this sheet.</a></li>
 
 			<li><a href="dependency-alerts/backend.html">Dependency Alert Checklist</a></li>
+			
+			<li>Review and remove 'manual' production database snapshots.</li>
 		</ul>
 
 	</ul>
