added instructions for logging in to ReDash

--- a/stack-release.html
+++ b/stack-release.html
@@ -177,9 +177,9 @@
 		<li> Review performance metrics:</li>
 		<ul>
 		
-			<li><a href="https://redash.synapse.org/dashboard/stack-meeting-athena-">Synapse Data Warehouse (Athena)</a></li>
-			
-			<li><a href="https://redash.synapse.org/dashboard/stack-meeting">Synapse Data Warehouse (MySQL)</a></li>
+			<li><a href="https://redash.synapse.org/dashboard/stack-meeting-athena-">Synapse Data Warehouse</a>
+			(<i>In LastPass, in the Shared-Platform folder, there is an item called redash.synapse.org. After checking that you are on the VPN, 
+			click the Launch button.  Then click on the link, above.)</i></li>
 
 			<li><a href="https://console.aws.amazon.com/cloudwatch/home?region=us-east-1#dashboards:name=Stack-status">EC-2/RDS Dashboard</a></li>
 
