added cost anomaly check to weekly review

--- a/stack-release.html
+++ b/stack-release.html
@@ -186,6 +186,7 @@
 			<li>For any metrics we track week-to-week (including RO duration), enter in <a href="https://docs.google.com/a/sagebase.org/spreadsheets/d/1u1fYXFkW4pzQ4f1OhQvyON9PEtgcP6UZLierGeuknbw/edit?usp=sharing">this sheet.</a></li>
 
 		</ul>
+		<li><a href="https://groups.google.com/a/sagebase.org/g/platform/search?q=AWS%20Cost%20Management%3A%20Anomaly%20Detection">AWS Cost Anomalies (look at the past week)</a></li>
 		<li><a href="dependency-alerts/backend.html">Dependency Alert Checklist</a></li>
 	</ul>
 </body>
