--- a/stack-release.html
+++ b/stack-release.html
@@ -181,7 +181,7 @@
 			(<i>In LastPass, in the Shared-Platform folder, there is an item called redash.synapse.org. After checking that you are on the VPN, 
 			click the Launch button.  Then click on the link, above.)</i></li>
 
-			<li><a href="https://console.aws.amazon.com/cloudwatch/home?region=us-east-1#dashboards:name=Stack-status">EC-2/RDS Dashboard</a></li>
+			<li><a href="https://console.aws.amazon.com/cloudwatch/home?region=us-east-1#dashboards:name=Stack-Status">EC-2/RDS Dashboard</a></li>
 
 			<li>For any metrics we track week-to-week (including RO duration), enter in <a href="https://docs.google.com/a/sagebase.org/spreadsheets/d/1u1fYXFkW4pzQ4f1OhQvyON9PEtgcP6UZLierGeuknbw/edit?usp=sharing">this sheet.</a></li>
 
